16/11/2016
- Etablissemet du changelog pour suivi de l'application
- Transmission d'une valeur temporaire dans les champs pour la conserver au reload et à la creation de nouvelle entité dans un formulaire imbriqué
- Suggestions cachées après avoir appuyé sur entrée dans un champ de suggestion
- Gestion plus fine des types de dates
- Etapes de listing présentes dans l'historique de la page
- Ajouts/suppressions de lignes présentes dans l'historique de la page

17/11/2016
- Changement du système des suggestions, utilisation normale de GetCompletions sans "More general"

08/12/2016
- Correction d'un crash au passage des valeur à la création d'un formulaire anonyme

13/12/2016
- On peut configurer le serveur SEWELIS interrogé simplement en éditant une valeur d'un petit dictionnaire JS dans index.html

TODO:
- Suppression des étapes intermédiaires (une seul type) de l'historique (+++)
- Remise à zéro de l'indice d'historique de la barre d'adresse lorsque nécessaire (ou trouver un moyen de rendre chaque session unique) (+++)
- Changement rechargement des completions; Cas-test: Film "I, origins" avec la meme personne directeur, scenariste et producteur, absent de la base (+++)
- Lien entre answers et formulaire (++)
- Mise en évidence du filtrage des suggestions (++)
- Ajout de bulles d'aide pour explication de l'utilité des boutons (+)