@@ -4,16 +4,19 @@ import java.util.Collection;
 import java.util.Iterator;
 import java.util.LinkedList;
 
+import com.irisa.formulis.control.ControlUtils;
 import com.irisa.formulis.model.form.FormElement;
 import com.irisa.formulis.model.suggestions.Increment;
 import com.irisa.formulis.model.suggestions.Increment.KIND;
+import com.irisa.formulis.view.AbstractFormulisWidget;
 import com.irisa.formulis.view.event.SuggestionSelectionEvent;
 import com.irisa.formulis.view.form.AbstractFormLineWidget;
 
 public class ClassSuggestionWidget extends AbstractSuggestionWidget {
 
-	public ClassSuggestionWidget(FormElement d, AbstractFormLineWidget fParent) {
+	public ClassSuggestionWidget(FormElement d, AbstractFormulisWidget fParent) {
 		super(d, fParent);
+		this.setSuggestionOnly(true);
 	}
 
 	@Override
@@ -34,6 +37,7 @@ public class ClassSuggestionWidget extends AbstractSuggestionWidget {
 		Iterator<Increment> itInc = c.iterator();
 		while(itInc.hasNext()) {
 			Increment inc = itInc.next();
+			ControlUtils.debugMessage("ClassSuggestionWidget setOracleSuggestions inc:"+ inc);
 			if(inc.getKind() == KIND.CLASS) {
 				suggs.add(new Suggestion(inc));
 			}
